objects/RLObject1__c.object
<CustomObject>
    <description>TEstDescription RLObject1</description>
    <fields>
        <fullName>RLObject1Field1__c</fullName>
        <label>RLObject1Field1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RLObject1Field2__c</fullName>
        <label>RLObject1Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RLObject1Field4__c</fullName>
        <label>RLObject1Field4</label>
        <type>Email</type>
    </fields>
    <label>RLObject1</label>
    <nameField>
        <label>RLObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RLObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>